force-app/main/default/objects/KOGRoleMapping__mdt/KOGRoleMapping__mdt.object-meta.xml
<CustomObject>
    <label>KOGRoleMapping</label>
    <pluralLabel>KOGRoleMappings</pluralLabel>
</CustomObject>