force-app/main/default/objects/KOGRoleMapping__mdt/fields/Is_SSP_User__c.field-meta.xml
<CustomField>
    <fullName>Is_SSP_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_SSP_User</label>
    <type>Checkbox</type>
</CustomField>