force-app/main/default/objects/KOGRoleMapping__mdt/fields/Related_Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Related_Permission_Sets__c</fullName>
    <label>Related Permission Sets</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>